config run arguments