@@ -1,3 +1,6 @@
+// Config arguments
+//--module-path .\lib\javafx-sdk-11.0.2\lib --add-modules
+//javafx.controls,javafx.fxml
 
 import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
